[gd_scene load_steps=9 format=2]

[ext_resource path="res://GUI and Stage/EndPoint.gd" type="Script" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI and Stage/EndPoint.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI and Stage/startButton.png" type="Texture" id=5]
[ext_resource path="res://MonsterManager.gd" type="Script" id=6]
[ext_resource path="res://GameManager.gd" type="Script" id=7]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_pivot_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[node name="Stage1" type="Node2D"]

[node name="EndPoint" parent="." instance=ExtResource( 4 )]
position = Vector2( 925, 189 )
script = ExtResource( 2 )

[node name="NextStageButton" type="TextureButton" parent="."]
margin_left = 457.0
margin_top = 291.0
margin_right = 793.0
margin_bottom = 441.0
rect_scale = Vector2( 1e-05, 1e-05 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="NextStageButton"]
anims/RESET = SubResource( 2 )
anims/appear = SubResource( 1 )

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Player" parent="GameManager" instance=ExtResource( 3 )]
pause_mode = 2
position = Vector2( 528, 198 )

[node name="MonsterManager" type="Node2D" parent="GameManager"]
script = ExtResource( 6 )

[connection signal="body_entered" from="EndPoint" to="EndPoint" method="_on_EndPoint_body_entered"]
[connection signal="body_entered" from="EndPoint" to="GameManager" method="_on_EndPoint_body_entered"]
[connection signal="pressed" from="NextStageButton" to="EndPoint" method="_on_TextureButton_pressed"]
[connection signal="spawn_monster" from="GameManager" to="GameManager/MonsterManager" method="_on_GameManager_spawn_monster"]
